src/explore-education-statistics-api-docs/source/stylesheets/app.scss
.technical-documentation {
  max-width: 50em;
}

.toc__list li {
  a:link,
  a:visited {
    padding: 8px 10px;
  }
}

.collapsible {
  word-break: break-word;
}

.highlight {
  position: relative;
}

.highlight code,
table code {
  font-size: 0.9rem !important;
  line-height: 1 !important;
}

.js-enabled .technical-documentation pre {
  padding: govuk-spacing(7) govuk-spacing(3) govuk-spacing(3);

  &:focus {
    border: 1px solid govuk-colour('black');
    box-shadow: inset 0 0 0 2px govuk-colour('black');
  }
}

